# Python_Next.js

./: README.md  docker-compose.yml
.kiro/steering/: tech.md
backend/: Dockerfile  pyproject.toml
backend/app/: database.py  main.py
backend/app/api/v1/endpoints/: todo.py
backend/app/models/: todo.py
backend/app/repositories/: todo_repository.py
backend/app/schemas/: todo.py
backend/app/services/: todo_service.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/components/: HelloComponent.tsx  TodoForm.tsx  TodoList.tsx
frontend/src/lib/: api.ts
frontend/src/types/: todo.ts
